@@ -1,3 +1,13 @@
+2013-01-25  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version): Version 0.6.2
+
+	* man/AES.Rd: Switch from paste0() to paste() to permit use on
+	R-oldrelease as per email by Uwe Ligges
+
+	* tests/AESTest.R: Idem
+	* tests/AESTest.Rout.save: Updated accordingly
+
 2013-01-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version): Version 0.6.1
